--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,6 @@
 aside,
 footer,
 header,
-hgroup,
 section{
   display: block;
 }
@@ -137,9 +136,6 @@ a:hover {
   color: #EA0011;
   text-decoration: underline;
 }
-hgroup {
-  margin-top: 50px;
-}
 footer {
     margin: 50px 0 25px;
 }
@@ -215,9 +211,9 @@ pre {
 <body>
 
 <section class='container'>
-          <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift</h1>
-          </hgroup>
+
+            <h1>Welcome to Bowing Viking application on OpenShift</h1>
+
 
 
         <div class="row">
