Edited index.html once again

--- a/views/index.html
+++ b/views/index.html
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
 
-            <h1>Welcome to Bowing Viking application on OpenShift new</h1>
+            <h1>Welcome to Bowing Viking application on OpenShift Hooray</h1>
 
 
 
