testing hotdeploy on index.html

--- a/views/index.html
+++ b/views/index.html
@@ -212,7 +212,8 @@ pre {
 
 <section class='container'>
 
-            <h1>Welcome to Bowing Viking application on OpenShift Hooray</h1>
+            <h1>Welcome to the Bowing Viking application on OpenShift Hooray</h1>
+    <h2>Testing hotdepoy</h2>
 
 
 
