testing hotdeploy on index.html timestamp

--- a/views/index.html
+++ b/views/index.html
@@ -214,6 +214,7 @@ pre {
 
             <h1>Welcome to the Bowing Viking application on OpenShift Hooray</h1>
     <h2>Testing hotdepoy</h2>
+    <h3>timestamp check</h3>
 
 
 
