--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to Bowing Viking on Openshift</title>
+  <title>Welcome to Bowing Viking running on Openshift</title>
 
 
 <style>
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
 
-            <h1>Welcome to the Bowing Viking application on OpenShift Hooray</h1>
+            <h1>Welcome to the Bowing Viking application on OpenShift Hooray Version 2</h1>
     <h2>Testing hotdepoy</h2>
     <h3>timestamp check</h3>
 
